Dynamic map has is own tab

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                     <li><a href="#minehome">Home</a></li>
                     <li><a href="#technicalities">Points techniques</a></li>
                     <li><a href="#rules">R&egrave;gles</a></li>
+                    <li><a href="/mcmap">Carte dynamique</a></li>
                 </ul>
             </nav>
         </header>
