New money capabilities

--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
                     <ul>
                         <li>Lorsqu'un mob ou un joueur est tu&eacute;, sa t&#x000EAte va parfois tomber sur le sol (collectionnez les ou utilisez les pour d&eacute;corer vos constructions!)</li>
                         <li>50% des joueurs doivent dormir pour que la nuit passe</li>
-                        <li>Un plugin de monnaie est install&eacute; sur le jeu. Tr&egrave;s utile lorsque vous avez des ressource en trop que vous voulez vendre</li>
-                        <li>Si vous voulez rejoindre un ami rapidement sur le serveur les commandes <b>/tpa</b>, <b>/tpaccept</b> et <b>/tpdeny</b> sont disponibles</li>
+                        <li>Un plugin de monnaie est install&eacute; sur le jeu. Tr&egrave;s utile lorsque vous avez des ressource en trop que vous voulez vendre. Achetez ensuite des objets rares au marketplace ou utilisez des commandes sp&eacute;ciales qui co&ucirc;tent de l'argent</li>
+                        <li>Il est possible de se t&eacute;l&eacute;porter directement &agrave; sa maison depuis n'importe o&ugrave; sur le serveur. Utilisez la commande <b>/sethome</b> pour d&eacute;finir les coordonn&eacute;es de votre maison.
+                            Utilisez la commande <b>/home</b> pour vous t&eacute;l&eacute;porter vers votre maison. Attention, cette commande co&ucirc;te 30$</li>
+                        <li>Si vous voulez rejoindre un ami rapidement sur le serveur les commandes <b>/tpa</b>, <b>/tpaccept</b> et <b>/tpdeny</b> sont disponibles. Ces commandes sont gratuites.</li>
                     </ul>
                 </div>
             </section>
