New Minecraft domain!

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         les outils additionnels &agrave; votre disposition
                     </p>
                     <h3>Statut du serveur</h3>
-                    <img src="https://mcapi.us/server/image?ip=minecraft-family.servegame.com">
+                    <img src="https://mcapi.us/server/image?ip=server.minecraft-family.ca">
                     <h3>Pr&eacute;requis pour se connecter au serveur Minecraft</h3>
                     <ul>
                         <li><b>Client Minecraft</b> - Seule la version <b>Java</b> est support&eacute;e. Pensez &agrave; toujours bien aligner la version de votre client avec celle du serveur.<br>
@@ -40,7 +40,7 @@
                         <li><b><a href="https://discord.gg/tUnGWUFXv7">Discord</a></b> - Seuls les joueurs autoris&eacute;s peuvent int&eacute;ragir avec la communaut&eacute; de joueurs.</li>
                     </ul>
                     <h3>Adresse du serveur Minecraft</h3>
-                    <p>minecraft-family.servegame.com</p>
+                    <p>server.minecraft-family.ca</p>
                     <h3>Carte dynamique du monde</h3>
                     <p><a href="/mcmap/">Minecraft Overviewer</a></p>
                     <p>Pour ajouter un marqueur sur la carte (base, ferme, point d'int&eacute;r&#x000EAt &agrave; visiter...)
