Updating the tnt_block image
Changing the tnt block image for one without white on the sides

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <header>
-            <img src="images/tnt_block.jpg" class="profile-img">
+            <img src="images/tnt_block.png" class="profile-img">
             <nav>
                 <ul>
                     <li><a href="#minehome">Home</a></li>
@@ -20,7 +20,7 @@
         <main>
             <section id="minehome">
                 <div class="section-inner">
-                    <img src="images/tnt_block.jpg" class="profile-img">
+                    <img src="images/tnt_block.png" class="profile-img">
                     <h1>Welcome to the Minecraft Family Server</h1>
                 </div>
             </section>
