--- a/index.html
+++ b/index.html
@@ -35,26 +35,31 @@
                     <h3>Statut du serveur</h3>
                     <img src="https://mcapi.us/server/image?ip=server.minecraft-family.ca">
                     <h3>Pr&eacute;requis pour se connecter au serveur Minecraft</h3>
-                    <ul>
-                        <li><b>Client Minecraft</b> - Seule la version <b>Java</b> est support&eacute;e. Pensez &agrave; toujours bien aligner la version de votre client avec celle du serveur.<br>
-                            La version exacte du client est inscrite dans la description du serveur :<br><img src="images/multiplayer-ingame-server-info.png" class="thumbnail-img"></li>
-                        <li><b>Serveur Minecraft</b> - Seuls les joueurs membres de la Whitelist du serveur Minecraft peuvent se connecter.</li>
-                        <li><b>Discord</b> - Seuls les joueurs autoris&eacute;s peuvent int&eacute;ragir avec la communaut&eacute; de joueurs.</li>
-                        <div id="discordInviteBox"></div>
-                        <script src="discord/discordInvite.js"></script>
-                        <script>
-                            discordInvite.init({
-                            inviteCode: 'tUnGWUFXv7',
-                            title: 'Minecraft Family',
-                            });
-                            discordInvite.render();
-                        </script>
-                    </ul>
+                    <dir class="ulParent">
+                        <dir class="list">
+                            <p><b>Client Minecraft</b> - Seule la version <b>Java</b> est support&eacute;e. Pensez &agrave; toujours bien aligner la version de votre client avec celle du serveur.<br>
+                                La version exacte du client est inscrite dans la description du serveur :<br><img src="images/multiplayer-ingame-server-info.png" class="thumbnail-img"></p>
+                            <hr>
+                            <p><b>Serveur Minecraft</b> - Seuls les joueurs membres de la Whitelist du serveur Minecraft peuvent se connecter.</p>
+                            <hr>
+                            <p><b>Discord</b> - Seuls les joueurs autoris&eacute;s peuvent int&eacute;ragir avec la communaut&eacute; de joueurs.</p>
+                            <div id="discordInviteBox">
+                                <script src="discord/discordInvite.js"></script>
+                                <script>
+                                    discordInvite.init({
+                                    inviteCode: 'tUnGWUFXv7',
+                                    title: 'Minecraft Family',
+                                    });
+                                    discordInvite.render();
+                                </script>
+                            </div>
+                        </dir>
+                    </dir>
                     <div class="adresseIP">
                         <h3>Adresse du serveur Minecraft</h3>
                         <p>
                             <div class="copyIP" id="copy" data-server="server.minecraft-family.ca">SERVER.MINECRAFT-FAMILY.CA
-                                <div class="copyIP_tooltip" id="tooltip">Clique moi pour copier l'IP</div>
+                                <div class="copyIP_tooltip" id="tooltip">Clique moi pour copier l'adresse du serveur</div>
                             </div>
                         </p>
                         <script type="text/javascript" >
@@ -63,11 +68,11 @@
                     
                             copy.onclick = function() { 
                                 document.execCommand("copy"); 
-                                tooltip.innerText = "Copié !";
+                                tooltip.innerText = "Copi&eacute !";
                             };
                             copy.onpointerleave = function() { 
                                 document.execCommand("copy"); 
-                                tooltip.innerText = "Clique moi pour copier l'IP";
+                                tooltip.innerText = "Clique moi pour copier l'adresse du serveur";
                             };    
                             copy.addEventListener("copy", function(event) { 
                                 event.preventDefault(); 
@@ -85,9 +90,9 @@
                         mettez le type de tag entre crochets sur la premi&egrave;re ligne (par exemple [Base]) 
                         et le texte que vous voulez dans les lignes suivantes.<br> Les tags suivants sont support&eacute;s pour le moment :<br>
                         <ul>
-                            <li>Base</li>
-                            <li>Farm</li>
-                            <li>Landmark</li>
+                            <li class="horizontal first">Base</li>
+                            <li class="horizontal">Farm</li>
+                            <li class="horizontal">Landmark</li>
                         </ul>
                             Exemple:<br>
                         <img src="images/poi-example.png" class="thumbnail-img"><br>
@@ -97,41 +102,59 @@
                     <h3>World seed</h3>
                     <p><a href="http://mineatlas.com/?levelName=4674907091838984161&seed=4674907091838984161">4674907091838984161</a></p>
                     <h3>Mods install&eacute;s sur le serveur</h3>
-                    <ul>
-                        <li>Lorsqu'un mob ou un joueur est tu&eacute;, sa t&#x000EAte va parfois tomber sur le sol (collectionnez les ou utilisez les pour d&eacute;corer vos constructions!)</li>
-                        <li>50% des joueurs doivent dormir pour que la nuit passe</li>
-                        <li>Un plugin de monnaie est install&eacute; sur le jeu. Tr&egrave;s utile lorsque vous avez des ressource en trop que vous voulez vendre. Achetez ensuite des objets rares au marketplace ou utilisez des commandes sp&eacute;ciales qui co&ucirc;tent de l'argent</li>
-                        <li>Il est possible de se t&eacute;l&eacute;porter directement &agrave; sa maison depuis n'importe o&ugrave; sur le serveur. Utilisez la commande <b>/sethome</b> pour d&eacute;finir les coordonn&eacute;es de votre maison.
-                            Utilisez la commande <b>/home</b> pour vous t&eacute;l&eacute;porter vers votre maison. Attention, cette commande co&ucirc;te 50$</li>
-                        <li>Si vous voulez rejoindre un ami rapidement sur le serveur les commandes <b>/tpa</b>, <b>/tpaccept</b> et <b>/tpdeny</b> sont disponibles. Ces commandes sont gratuites.</li>
-                    </ul>
+                    <dir class="list">
+                        <p>
+                            <p>Lorsqu'un mob ou un joueur est tu&eacute;, sa t&#x000EAte va parfois tomber sur le sol (collectionnez les ou utilisez les pour d&eacute;corer vos constructions!) </p>
+                            <hr>
+                            <p>50% des joueurs doivent dormir pour que la nuit passe</p>
+                            <hr>
+                            <p>Un plugin de monnaie est install&eacute; sur le jeu. Tr&egrave;s utile lorsque vous avez des ressource en trop que vous voulez vendre. Achetez ensuite des objets rares au marketplace ou utilisez des commandes sp&eacute;ciales qui co&ucirc;tent de l'argent </p>
+                            <hr>
+                            <p>Il est possible de se t&eacute;l&eacute;porter directement &agrave; sa maison depuis n'importe o&ugrave; sur le serveur. Utilisez la commande <b>/sethome</b> pour d&eacute;finir les coordonn&eacute;es de votre maison.
+                                Utilisez la commande <b>/home</b> pour vous t&eacute;l&eacute;porter vers votre maison. Attention, cette commande co&ucirc;te 50$ </p>
+                            <hr>
+                            <p>Si vous voulez rejoindre un ami rapidement sur le serveur les commandes <b>/tpa</b>, <b>/tpaccept</b> et <b>/tpdeny</b> sont disponibles. Ces commandes sont gratuites. </p>
+                        </p>
+                    </dir>
                 </div>
             </section>
             <section id="rules">
                 <div class="section-inner">
                     <h2>R&egrave;gles</h2>
                     <p>Pour un maximum de plaisir, voici quelques r&egrave;gles tr&egrave;s simples que nous devons tous respecter</p>
+                    <hr class="thick">    
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Cr&eacute;ez votre base &agrave; une distance raisonnable de celle des autres joueurs ( disons 500+ blocks).<br>Et oui ! Certains de vos voisins pourraient avoir de grandes envies d'expansion !
                              Et puis le Nether est l&agrave; pour voyager rapidement de base en base.
                         </p>
+                        <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Visitez le monde, &eacute;merveillez vous devant les cr&eacute;ations des autres !!<br>Par contre, un creeper vient de vous exploser &agrave; la face et cela a endommag&eacute; quelque chose ?
                             Rebouchez, le trou, r&eacute;parez les d&eacute;g&acirc;ts. Ce n'est vraiment pas possible ? Laissez un mot d'excuse, les erreurs &ccedil;a arrive.
                         </p>
+                        <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Utilisez les mods client que vous voulez, mais sans nuire &agrave; l'exp&eacute;rience des autres joueurs ni &agrave; la v&ocirc;tre.<br><i>Seuls les noobs utilisent des mods comme X-RAY !</i><br>
                             Utilisateurs de <a href="https://multimc.org/">MultiMC</a>, vous pouvez importer un profil align&eacute; sur la version du serveur et d&eacute;j&agrave; modd&eacute; avec Voxelmap et Mouse Wheelie <a href="/multimc/">ici</a>
                         </p>
+                        <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Le PVP est activ&eacute; sur le serveur, mais ne tuez pas les autres joueurs sans leur consentement.<br>Vous avez envie d'une bonne bataille ?
                             Rendez-vous sur l'ar&egrave;ne de PVP et amusez-vous !
                         </p>
+                        <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Ne pillez pas les fermes communautaires (par exemple la ferme de fer).<br>Prenez ce dont vous avez besoin, laissez-en pour les autres.</p>
+                        <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Il est possible d'acheter et de vendre des items dans le jeu. Le plus simple est d'aller au Marketplace.<br>
                             Pour savoir combien vous avez d'argent en banque, entrez la commande <b>/bal</b> dans le chat
                         </p>
+                        <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Vous voulez soumettre une id&eacute;e, avez besoin d'une am&eacute;lioration, voulez organiser un &eacute;v&egrave;nement comme un combat PVP, postez dans le Channel Discord #suggestions</p>
+                        <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Une question, besoin d'aide avec le serveur, un ami de confiance veut se joindre ?<br>Demandez &agrave; Freetonio</p>
-                        <p><img src="images/arrow-right.png" class="thumbnail-img">Respectez la "bulle" des joueurs lorsqu'ils ne veulent pas &#x000EAtre importun&eacute;s chez eux.<br>Soyez polis et respectueux les uns envers les autres.<br>
-                            Tout &eacute;cart de langage, ou attitude n&eacute;faste sera sanctionn&eacute;e, premi&egrave;rement par un avertissement au joueur fautif, ensuite par un bannissement plus ou moins long en fonction de l'importance de la faute.
-                        </p>
+                        <hr>
+                        <p><img src="images/arrow-right.png" class="thumbnail-img">Respectez la "bulle" des joueurs lorsqu'ils ne veulent pas &#x000EAtre importun&eacute;s chez eux.</p>
+                        <hr>
+                        <p><img src="images/arrow-right.png" class="thumbnail-img">Soyez polis et respectueux les uns envers les autres.</p>
+                        <hr>
+                        <p><img src="images/arrow-right.png" class="thumbnail-img">Tout &eacute;cart de langage, ou attitude n&eacute;faste sera sanctionn&eacute;e, premi&egrave;rement par un avertissement au joueur fautif, ensuite par un bannissement plus ou moins long en fonction de l'importance de la faute.</p>
+                    </p>
                 </div>
             </section>
         </main>
