change the rule subtitle to h3
Changed the rule subtitle to h3 to make more emphasis and to better block out the page

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <section id="rules">
                 <div class="section-inner">
                     <h2>R&egrave;gles</h2>
-                    <p>Pour un maximum de plaisir, voici quelques r&egrave;gles tr&egrave;s simples que nous devons tous respecter</p>
+                    <h3>Pour un maximum de plaisir, voici quelques r&egrave;gles tr&egrave;s simples que nous devons tous respecter</h3>
                     <hr class="thick">    
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Cr&eacute;ez votre base &agrave; une distance raisonnable de celle des autres joueurs ( disons 500+ blocks).<br>Et oui ! Certains de vos voisins pourraient avoir de grandes envies d'expansion !
                              Et puis le Nether est l&agrave; pour voyager rapidement de base en base.
