Updating readability for the technical point intro
Setting the technical point description to h3 to better block out the page and adding a line separator the improve the readability

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
             <section id="technicalities">
                 <div class="section-inner">
                     <h2>Points techniques</h2>
-                    <p>Tout ce dont vous avez besoin pour vous connecter au serveur et comprendre quels sont
+                    <h3>Tout ce dont vous avez besoin pour vous connecter au serveur et comprendre quels sont
                         les outils additionnels &agrave; votre disposition
-                    </p>
+                    </h3>
+                    <hr class="thick">  
                     <h3>Statut du serveur</h3>
                     <img src="https://mcapi.us/server/image?ip=server.minecraft-family.ca" alt="Sorry! Image not available at this time" 
                     onError="this.onerror=null;this.src='';">
