--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel='icon' href='favicon.ico' type='image/x-icon'/ >
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="discord/discordInvite.css"/>
+        <script src="scripts/jquery.min.js"></script>
     </head>
 
     <body>
