--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     
                             copy.onclick = function() { 
                                 document.execCommand("copy"); 
-                                tooltip.innerText = "Copi&eacute; !";
+                                tooltip.innerText = "C'est fait !";
                             };
                             copy.onpointerleave = function() { 
                                 document.execCommand("copy"); 
