Adding a link to the main page when clicking the image
Adding a href to the index.html to add t he option to reload the page or return to the main page if one day we use more than one

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <img src="images/tnt_block.png" class="profile-img">
+            <a href="index.html"><img src="images/tnt_block.png" class="profile-img"></a>
             <nav>
                 <ul>
                     <li><a href="#minehome">Home</a></li>
