Opening the mcmap in a new tab
Opening the map in a new tab to facilitate the way back on the main page, pending the adding of the header on the mcmap page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <li><a href="#minehome">Home</a></li>
                     <li><a href="#technicalities">Points techniques</a></li>
                     <li><a href="#rules">R&egrave;gles</a></li>
-                    <li><a href="/mcmap">Carte dynamique</a></li>
+                    <li><a href="/mcmap" target="_blank">Carte dynamique</a></li>
                 </ul>
             </nav>
         </header>
@@ -121,7 +121,7 @@
                         </script>
                      </div>
                     <h3>Carte dynamique du monde</h3>
-                    <p><a href="/mcmap/">Minecraft Overviewer</a></p>
+                    <p><a href="/mcmap/" target="_blank">Minecraft Overviewer</a></p>
                     <p>Pour ajouter un marqueur sur la carte (base, ferme, point d'int&eacute;r&#x000EAt &agrave; visiter...)
                         rendez-vous directement dans le jeu, placez un panneau de n'importe quel bois, 
                         mettez le type de tag entre crochets sur la premi&egrave;re ligne (par exemple [Base]) 
