--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         </p>
                         <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Visitez le monde, &eacute;merveillez vous devant les cr&eacute;ations des autres !!<br>Par contre, un creeper vient de vous exploser &agrave; la face et cela a endommag&eacute; quelque chose ?
-                            Rebouchez, le trou, r&eacute;parez les d&eacute;g&acirc;ts. Ce n'est vraiment pas possible ? Laissez un mot d'excuse, les erreurs &ccedil;a arrive.
+			Rebouchez, le trou, r&eacute;parez les d&eacute;g&acirc;ts. Ce n'est vraiment pas possible ? Laissez un mot d'excuse, les erreurs &ccedil;a arrive.<br>Aussi, ne modifiez pas les cr&eacute;ations des autres sans leur accord.
                         </p>
                         <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Utilisez les mods client que vous voulez, mais sans nuire &agrave; l'exp&eacute;rience des autres joueurs ni &agrave; la v&ocirc;tre.<br><i>Seuls les noobs utilisent des mods comme X-RAY !</i><br>
