A few modifications to the rules pages

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                             <p>50% des joueurs doivent dormir pour que la nuit passe</p>
                             <hr>
                             <p>Un plugin de monnaie est install&eacute; sur le jeu. Tr&egrave;s utile lorsque vous avez des ressource en trop que vous voulez vendre. Achetez ensuite des objets rares au marketplace ou utilisez des commandes sp&eacute;ciales qui co&ucirc;tent de l'argent </p>
+                            <p><a href="https://www.youtube.com/watch?v=QtEE_f410x0" target="_blank">Vid&eacute;o explicative sur le fonctionnement des panneaux</a></p>
                             <hr>
                             <p>Il est possible de se t&eacute;l&eacute;porter directement &agrave; sa maison depuis n'importe o&ugrave; sur le serveur. Utilisez la commande <b>/sethome</b> pour d&eacute;finir les coordonn&eacute;es de votre maison.
                                 Utilisez la commande <b>/home</b> pour vous t&eacute;l&eacute;porter vers votre maison. Attention, cette commande co&ucirc;te 50$ </p>
@@ -165,7 +166,7 @@
                         </p>
                         <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Visitez le monde, &eacute;merveillez vous devant les cr&eacute;ations des autres !!<br>Par contre, un creeper vient de vous exploser &agrave; la face et cela a endommag&eacute; quelque chose ?
-			Rebouchez, le trou, r&eacute;parez les d&eacute;g&acirc;ts. Ce n'est vraiment pas possible ? Laissez un mot d'excuse, les erreurs &ccedil;a arrive.<br>Aussi, ne modifiez pas les cr&eacute;ations des autres sans leur accord.
+                            Rebouchez, le trou, r&eacute;parez les d&eacute;g&acirc;ts. Ce n'est vraiment pas possible ? Laissez un mot d'excuse, les erreurs &ccedil;a arrive.<br>Aussi, ne modifiez pas les cr&eacute;ations des autres sans leur accord. 
                         </p>
                         <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Utilisez les mods client que vous voulez, mais sans nuire &agrave; l'exp&eacute;rience des autres joueurs ni &agrave; la v&ocirc;tre.<br><i>Seuls les noobs utilisent des mods comme X-RAY !</i><br>
@@ -178,10 +179,6 @@
                         <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Ne pillez pas les fermes communautaires (par exemple la ferme de fer).<br>Prenez ce dont vous avez besoin, laissez-en pour les autres.</p>
                         <hr>
-                        <p><img src="images/arrow-right.png" class="thumbnail-img">Il est possible d'acheter et de vendre des items dans le jeu. Le plus simple est d'aller au Marketplace.<br>
-                            Pour savoir combien vous avez d'argent en banque, entrez la commande <b>/bal</b> dans le chat
-                        </p>
-                        <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Vous voulez soumettre une id&eacute;e, avez besoin d'une am&eacute;lioration, voulez organiser un &eacute;v&egrave;nement comme un combat PVP, postez dans le Channel Discord #suggestions</p>
                         <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Une question, besoin d'aide avec le serveur, un ami de confiance veut se joindre ?<br>Demandez &agrave; Freetonio</p>
@@ -190,7 +187,11 @@
                         <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Soyez polis et respectueux les uns envers les autres.</p>
                         <hr>
-                        <p><img src="images/arrow-right.png" class="thumbnail-img">Tout &eacute;cart de langage, ou attitude n&eacute;faste sera sanctionn&eacute;e, premi&egrave;rement par un avertissement au joueur fautif, ensuite par un bannissement plus ou moins long en fonction de l'importance de la faute.</p>
+                        <p><img src="images/arrow-right.png" class="thumbnail-img">Tout &eacute;cart de langage, ou attitude n&eacute;faste sera sanctionn&eacute;e, premi&egrave;rement par un avertissement au joueur fautif, ensuite par un bannissement plus ou moins long en fonction de l'importance de la faute.<br>
+                            Rappelez-vous qu'absolument toutes les actions de tous les joueurs sont enregistr&eacute;es en tout temps par le serveur.
+                        </p>
+                        <hr>
+                        <p><img src="images/arrow-right.png" class="thumbnail-img">La r&egrave;gle la plus importante de toutes : Have Fun !!</p>
                     </p>
                 </div>
             </section>
